--- a/src/markdown/mas/steekproefontwerp_leemstreek.Rmd
+++ b/src/markdown/mas/steekproefontwerp_leemstreek.Rmd
@@ -1300,11 +1300,11 @@ In de Westelijke leemstreek zijn drie punten gevonden die niet mogelijk zijn om 
   
 Het resultaat wordt als CSV en KML teruggestuurd. Een eerste kolom `beslissing` wordt toegevoegd met de volgende zaken:
 
-- behouden: als punt prima te tellen valt
-- vervangen door reserve: punt kan niet geteld worden en moet vervangen worden door eerstvolgende punt uit reserveset
-- vervanging: reservepunt dat dient als vervanging voor geschrapt punt
+- *behouden*: als punt prima te tellen valt
+- *vervangen door reserve*: punt kan niet geteld worden en moet vervangen worden door eerstvolgende punt uit reserveset
+- *vervanging*: reservepunt dat dient als vervanging voor geschrapt punt
 
 Een tweede kolom wordt toegevoegd `vervangen door`. Dit is enkel ingevuld bij een geschrapt punt uit de eerste set met de pointid van het punt waardoor het vervangen word uit de reserve set.  
   
-Uiteindelijk moeten we tot een CSV komen waarbij enkel de punten `behouden` van de eerste batch en `vervanging` van de reserve batch geüpload worden in Avimap (met tellerscode erbij).
+Uiteindelijk moeten we tot een CSV komen waarbij enkel de punten *behouden* van de eerste batch en *vervanging* van de reserve batch geüpload worden in Avimap (met tellerscode erbij).
 
